# tally

./: .env  .gitattributes  .gitignore  LICENSE  Pipfile  README.md  app.py  pyproject.toml  setup.cfg
.github/workflows/: CI.yaml
migrations/versions/: 2403b4a7a3a1_initial_migration.py  eba9be421635_initial_migration.py
tally/: __init__.py  app.py  config.py  extensions.py  models.py
tally/auth/: __init__.py  forms.py  models.py  routes.py
tally/auth/templates/: account.html  login.html  register.html
tally/static/: _colors.scss  style.css  style.scss
tally/tally/: __init__.py  forms.py  models.py  parse.py  review.py  routes.py
tally/tally/templates/: bills.html  categories.html  categorize.html  edit_bill.html  edit_category.html  home.html  new_bill.html  new_statement.html  review_summary.html
tally/templates/: base.html  macros.html
tests/: conftest.py  test_models.py
tests/auth/: test_forms.py  test_models.py  test_routes.py
tests/tally/: test_forms.py  test_models.py  test_parse.py  test_review.py  test_routes.py
