[tool.black]
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.svn|_build|buck-out|build|dist|migrations)/'
line-length = 98

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.mypy]
python_version = "3.10"
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

  [[tool.mypy.overrides]]
  module = ["tally.*"]
  disallow_untyped_defs = true

  [[tool.mypy.overrides]]
  module = [
    "flask_bcrypt.*",
    "flask_login.*",
    "flask_migrate.*",
    "flask_sqlalchemy.*",
    "wtforms.*",
    "flask_wtf.*",
    "tika",
  ]
  ignore_missing_imports = true

[tool.pylint]
  [tool.pylint.master]
  load-plugins = ["pylint_flask_sqlalchemy"]
  max-line-length = 98

  [tool.pylint.typecheck]
  ignored-classes = "scoped_session"

  [tool.pylint.messages_control]
  disable = [
    "import-outside-toplevel",
    "wrong-import-position",
    "missing-module-docstring",
    "invalid-name",
    "design",
    "C0330",
    "C0326",
  ]

[tool.pytest]
  [tool.pytest.ini_options]
  addopts = "-n 4 --durations=5"
  testpaths = ["tests"]

[tool.poetry]
name = "tally"
version = "0.1.0"
description = "Flask application for tracking expense data from RBC's pdf credit card statements."
authors = ["Scott Dalgliesh"]
license = "MIT"

  [tool.poetry.dependencies]
  python = "^3.10"
  Flask = "^2.0"
  Flask-Bcrypt = "^0.7.1"
  Flask-Login = "^0.5.0"
  Flask-Migrate = "^3.1.0"
  Flask-SQLAlchemy = "^2.5.1"
  Flask-WTF = "^1.0"
  WTForms = { extras = ["email"], version = "^2.3.3" }
  python-dotenv = "^0.16.0"
  tika = "^1.24"

  [tool.poetry.dev-dependencies]
  pylint = "^2.12.2"
  pylint-flask-sqlalchemy = "^0.2.0"
  pytest = "^6.2.5"
  flask-shell-ipython = "^0.4.1"
  pytest-xdist = "^2.5.0"
  pytest-flask = "^1.2.0"
  pytest-cov = "^3.0.0"
  black = "^21.12b0"
  SQLAlchemy = { extras = ["mypy"], version = "^1.4.29" }
  mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
